dnl --- Process this file with autoconf to produce a configure script ---

dnl --- Style and some code below nicked from the linuxwacom package ;-) ---

AC_INIT(src-expresskeys/main_setup.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(expresskeys, 0.4.1)
AM_MAINTAINER_MODE
AC_PROG_CC

dnl --- Check for the presence of header files not included in a standard check.
AC_CHECK_HEADERS([stdio.h ctype.h signal.h libgen.h])

dnl --- Specify our source directories. OBS: If they change, AC_OUTPUT must
dnl also be changed accordingly (at the end of this file) ---

SRC_DIRS=""
SRC_EXPRESSKEYS=src-expresskeys

dnl --- Specify some old monolithic X paths. 

if test -d /usr/X11R6/lib64 ; then
	XLIBDIR_X11R6=/usr/X11R6/lib64
else
	XLIBDIR_X11R6=/usr/X11R6/lib
fi

XINCDIR_X11R6=/usr/X11R6/include

dnl --- Start with a clean slate.

ENV_XLIB=no
ENV_XINC=no

dnl --- Begin function for checking Xlib library environment ---

AC_DEFUN([AC_CHECK_XLIB],[
XLIBDIR=
AC_ARG_WITH(xlib,
AS_HELP_STRING([--with-xlib=dir], [use a specified X library directory]),
[XLIBDIR=$withval])

AC_MSG_CHECKING(for X library directory)

if test "$XLIBDIR" == ""; then
	XLIBDIR_X11R7=$(pkg-config --variable=libdir x11 2>/dev/null)
	if test $? != 0 || test ! -d $XLIBDIR_X11R7; then
		if test -d $XLIBDIR_X11R6; then
			XLIBDIR=$XLIBDIR_X11R6
			ENV_XLIB=yes
			AC_MSG_RESULT(found $XLIBDIR)
		else
			ENV_XLIB=no
			AC_MSG_RESULT(not found - tried $XLIBDIR_X11R6)
		fi
	else
		XLIBDIR=$XLIBDIR_X11R7
		ENV_XLIB=yes
		AC_MSG_RESULT(found $XLIBDIR)
	fi
elif test -d $XLIBDIR; then
	ENV_XLIB=yes
	AC_MSG_RESULT(found $XLIBDIR)
else
	ENV_XLIB=no
	AC_MSG_RESULT(not found - tried $XLIBDIR)
fi
])

dnl --- End function for checking Xlib library environment ---

dnl --- Begin function for checking Xlib include environment ---

AC_DEFUN([AC_CHECK_XINC],[
XINCDIR=
AC_ARG_WITH(xinc,
AS_HELP_STRING([--with-xinc=dir], [use a specified X include directory]),
[XINCDIR=$withval])

AC_MSG_CHECKING(for X include directory)

if test "$XINCDIR" == ""; then
        XINCDIR_X11R7=$(pkg-config --variable=includedir x11 2>/dev/null)
        if test $? != 0 || test ! -d $XINCDIR_X11R7; then
                if test -d $XINCDIR_X11R6; then
                        XINCDIR=$XINCDIR_X11R6
                        ENV_XINC=yes
                        AC_MSG_RESULT(found $XINCDIR)
                else
                        ENV_XINC=no
                        AC_MSG_RESULT(not found - tried $XINCDIR_X11R6)
                fi
        else
                XINCDIR=$XINCDIR_X11R7
                ENV_XINC=yes
                AC_MSG_RESULT(found $XINCDIR)
        fi
elif test -d $XINCDIR; then
        ENV_XINC=yes
        AC_MSG_RESULT(found $XINCDIR)
else
        ENV_XINC=no
        AC_MSG_RESULT(not found - tried $XINCDIR)
fi
])

dnl --- End function for checking Xlib include environment ---

dnl --- Begin function for checking Xlib details ---

AC_DEFUN([AC_CHECK_XDETAIL],[

SOMEERROR=0

echo $'\nChecking the X compiling environment in detail...\n'

echo $'main(){}'|$CC -L$XLIBDIR -lX11 -xc - -o dum 2> /dev/null
if test $? != 0 ; then
   echo "Can not link with X11 $XLIBDIR/libX11.so library!"
   SOMEERROR=1
else
   echo "$XLIBDIR/libX11.so OK"
fi

echo $'main(){}'|$CC -L$XLIBDIR -lXext -xc - -o dum 2> /dev/null
if test $? != 0 ; then
   echo "Can not link with Xext $XLIBDIR/libXext.so library!"
   SOMEERROR=1
else
   echo "$XLIBDIR/libXext.so OK"
fi

echo $'main(){}'|$CC -L$XLIBDIR -lXi -xc - -o dum 2> /dev/null
if test $? != 0 ; then
   echo "Can not link with Xi $XLIBDIR/libXi.so library!"
   SOMEERROR=1
else
   echo "$XLIBDIR/libXi.so OK"
fi

echo $'main(){}'|$CC -L$XLIBDIR -lXtst -xc - -o dum 2> /dev/null
if test $? != 0 ; then
   echo "Can not link with Xtst $XLIBDIR/libXtst.so library!"
   SOMEERROR=1
else
   echo "$XLIBDIR/libXtst.so OK"
fi

echo $'#include <X11/Xlib.h>\nmain(){}'|$CC -I$XINCDIR -xc - -o dum 2> /dev/null
if test $? != 0 ; then
   echo "Can not include $XINCDIR/X11/Xlib.h header file!"
   SOMEERROR=1
else
   echo "$XINCDIR/X11/Xlib.h OK"
fi

echo $'#include <X11/Xutil.h>\nmain(){}'|$CC -I$XINCDIR -xc - -o dum 2> /dev/null
if test $? != 0 ; then
   echo "Can not include $XINCDIR/X11/Xutil.h header file!"
   SOMEERROR=1
else
   echo "$XINCDIR/X11/Xutil.h OK"
fi

echo $'#include <X11/extensions/XInput.h>\nmain(){}'|$CC -I$XINCDIR -xc - -o dum 2>/dev/null
if test $? != 0 ; then
   echo "Can not include $XINCDIR/X11/extensions/XInput.h header file!"
   SOMEERROR=1
else
   echo "$XINCDIR/X11/extensions/XInput.h OK"
fi

echo $'#include <X11/extensions/XIproto.h>\nmain(){}'|$CC -I$XINCDIR -xc - -o dum 2>/dev/null
if test $? != 0 ; then
   echo "Can not include $XINCDIR/X11/extensions/XIproto.h header file!"
   SOMEERROR=1
else
   echo "$XINCDIR/X11/extensions/XIproto.h OK"
fi

echo $'#include <X11/extensions/XTest.h>\nmain(){}'|$CC -I$XINCDIR -xc - -o dum 2>/dev/null
if test $? != 0 ; then
   echo "Can not include $XINCDIR/X11/extensions/XTest.h header file!"
   SOMEERROR=1
else
   echo "$XINCDIR/X11/extensions/XTest.h OK"
fi

rm -f dum

if test $SOMEERROR != 0 ; then
   echo $'\nThe X compiling environment is NOT complete!
Some linux distributions omit parts of, or sometimes
the whole, X development environment. Based on the
error message(s) above you should be able to hunt down
which package(s) you need to install. For example, one
distribution call their xinput and xtest packages
libxi-dev and libxtst-dev\n'
   exit
else
   echo $'\nThe X compiling environment seems to be all OK\n'
fi

])

dnl --- End function for checking Xlib details ---

dnl --- Call functions to check X libraries and includes ---

AC_CHECK_XLIB
AC_CHECK_XINC

dnl --- Check if we should build expresskeys (default yes) ---

EXPRESSKEYS_DEFAULT=yes
OPTION_EXPRESSKEYS=no
AC_ARG_ENABLE(expresskeys,
AC_HELP_STRING([--enable-expresskeys], [Enable building expresskeys [[default=yes]]]),
	, enable_expresskeys=$EXPRESSKEYS_DEFAULT)
if test "$enable_expresskeys" != "no"; then
	if test x$ENV_XLIB != xyes; then
		echo "***"; echo "*** WARNING libraries:";
		echo "*** We failed to locate a full Xlib environment,"
		echo "*** and will therefore not build expresskeys."
                echo "*** Try './configure --with-xlib=/some/directory'"
                echo "*** where your Xlib libraries can be found."
                echo "*** By default we test what is returned from the"
		echo "*** command 'pkg-config --variable=libdir x11'"
		echo "*** which works in the modular X11R7 releases."
		echo "*** If that fails, we try a hardcoded $XLIBDIR_X11R6"
		echo "*** for the monolithic X11R6 releases. Both these"
		echo "*** tests have obviously failed to produce a path."
		echo "*** "
		echo "***"
                exit
	else
		OPTION_EXPRESSKEYS=yes
		EXPRESSKEYS_LIBS="-L$XLIBDIR -lX11 -lXi -lXtst"
		SRC_DIRS="$SRC_DIRS $SRC_EXPRESSKEYS"
	fi
	if test x$ENV_XINC != xyes; then
		echo "***"; echo "*** WARNING include files:";
		echo "*** We failed to locate a full Xlib environment,"
		echo "*** and will therefore not build expresskeys."
		echo "*** Try './configure --with-xinc=/some/directory'"
		echo "*** where your Xlib include files can be found."
		echo "*** By default we test what is returned from the"
		echo "*** command 'pkg-config --variable=includedir x11'"
		echo "*** which works in the modular X11R7 releases."
		echo "*** If that fails, we try a hardcoded $XINCDIR_X11R6"
		echo "*** for the monolithic X11R6 releases. Both these"
		echo "*** tests have obviously failed to produce a path."
		echo "*** "
		echo "***"
		exit
	else
		EXPRESSKEYS_INCL="-I$XINCDIR"
	fi
fi

dnl --- Call function to check X in detail ---

AC_CHECK_XDETAIL

dnl --- Separate test output from file-generation output ---

AC_SUBST(SRC_DIRS)
AC_SUBST(EXPRESSKEYS_LIBS)
AC_SUBST(EXPRESSKEYS_INCL)

dnl --- Create the files ---

AC_OUTPUT(Makefile
	src-expresskeys/Makefile)

dnl --- Show the result ---

echo ""
echo "----------------------------------------"
echo "  BUILD ENVIRONMENT:"
echo "      X libraries - $ENV_XLIB $XLIBDIR"
echo "       X includes - $ENV_XINC $XINCDIR"
echo ""
echo "  BUILD OPTIONS:"
echo "      expresskeys - $OPTION_EXPRESSKEYS"
echo "----------------------------------------"
echo ""

